# SDLVideoPlayer

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake  FindSDL.cmake  MSVC.cmake  Output.cmake  Universe.cmake  WarningAsError.cmake
include/: mp4_common.h
muxer/: CMakeLists.txt  main.c  muxer.c  muxer.h
player/: CMakeLists.txt  main.c  media_decoder.c  media_decoder.h  player.h
sdl/lib/x86/: SDL2.lib
src/: h264reader.c
